--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thesis",
-  "homepage": "http://miriamorlansky.github.io/design",
+  "homepage": "http://miriamorlansky.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
