--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thesis",
-  "homepage": "http://miriamorlansky.github.io/design/",
+  "homepage": "https://miriamorlansky.github.io/design/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,42 +8,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "typewriter-effect": "^2.19.0",
+    "vite": "^4.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   }
 }
